--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
-APP_NAME=Laravel
+APP_NAME=Article_Plaza
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
+
+ARTICLE_RATE_DAILY_LIMIT=10
+HOURLY_API_THROTTLE=30
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
